feat: add more db to connect

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 sqlalchemy==2.0.38
 
 ### Drivers
-# PostgreSQL
-psycopg==3.2.4
+psycopg==3.2.4 # PostgreSQL
+PyMySQL==1.1.1 # MySQL, MariaDB
 
+### Visualizers
 graphviz==0.20.3
 
+### UI
 flet==0.29.0.dev5039
