--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   postgresql:
     image: postgres:16
-    container_name: postgresql
+    container_name: erd-postgresql
     volumes:
       - ./docker/data/postgres:/var/lib/postgresql/data
     environment:
@@ -9,4 +9,30 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_DEFAULT}
     ports:
-      - "5440:5432"
+      - "5433:5432"
+
+  mariadb:
+    image: mariadb:11.8.2
+    container_name: erd-mariadb
+    environment:
+      MARIADB_ROOT_PASSWORD: ${DB_PASSWORD}
+      MARIADB_DATABASE: ${DB_DEFAULT}
+      MARIADB_USER: ${DB_USER}
+      MARIADB_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - "3307:3306"
+    volumes:
+      - ./docker/data/mariadb:/var/lib/mysql
+
+  mysql:
+    image: mysql:9.3.0
+    container_name: erd-mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_DEFAULT}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - "3308:3306"
+    volumes:
+      - ./docker/data/mysql:/var/lib/mysql
